k8s/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: app-issuer 
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - intern-manager.tech
    - www.intern-manager.tech
    secretName: certificate-secret
  rules:
    - host: intern-manager.tech
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: client
                port:
                  number: 80
          - pathType: Prefix
            path: /api/
            backend:
              service:
                name: server
                port:
                  number: 8080
    - host: www.intern-manager.tech
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: client
                port:
                  number: 80
          - pathType: Prefix
            path: /api/
            backend:
              service:
                name: server
                port:
                  number: 8080
